# clip-lab

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/api/: Dockerfile
apps/api/cliplab_api/: cli.py  main.py  pipeline.py  renderer_client.py
apps/renderer/: .dockerignore  package-lock.json  package.json
apps/renderer/service/: Dockerfile  package-lock.json  package.json
apps/renderer/service/src/: render-worker.ts  server.ts
apps/renderer/src/: Root.tsx
apps/renderer/src/compositions/: ShortVideo.tsx
apps/renderer/src/lib/: captions.ts
apps/web/: .dockerignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
apps/web/src/: App.jsx  config.js
docs/: api.md  architecture.md  cli.md  docker.md  model-providers.md  output-contract.md  pipeline.md  public-review.md  quickstart.md  roadmap.md  secrets.md  troubleshooting.md
fixtures/: sample.transcript.json
tests/: test_failure_messages.py  test_import_boundaries.py  test_pipeline_smoke.py  test_schemas_and_intelligence.py  test_visual_layout.py
